[gd_scene load_steps=57 format=3 uid="uid://ctgxe1xpnykuc"]

[ext_resource type="Script" path="res://Scripts/UI/item_ui_slot.gd" id="1_b8hg7"]
[ext_resource type="Texture2D" uid="uid://da8a0jgjae011" path="res://Assets/Sprites/UI/rounded_corners_square-export.png" id="2_ii87q"]
[ext_resource type="Texture2D" uid="uid://buoupuxk2qtji" path="res://Assets/Sprites/catalog_icons/dust_blade_icon.png" id="3_6n6lt"]
[ext_resource type="Texture2D" uid="uid://5m5w7pfo7ad" path="res://Assets/Sprites/catalog_icons/poison_icon.png" id="4_6ymjm"]
[ext_resource type="Texture2D" uid="uid://b7ug10dy6sjyf" path="res://Assets/Sprites/catalog_icons/quick_blade_icon.png" id="5_buo2t"]
[ext_resource type="Texture2D" uid="uid://bekchyhnq1ebe" path="res://Assets/Sprites/catalog_icons/shadow_blade_icon.png" id="6_x4hkk"]
[ext_resource type="Texture2D" uid="uid://c48c6oioxdka5" path="res://Assets/Sprites/catalog_icons/shadow_flame_icon.png" id="7_3vbuo"]
[ext_resource type="Texture2D" uid="uid://bi1byk6jamtg" path="res://Assets/Sprites/catalog_icons/shadow_heart_icon.png" id="8_3xt8q"]
[ext_resource type="Texture2D" uid="uid://b5aq6dmwlrckm" path="res://Assets/Sprites/catalog_icons/boots_icon.png" id="9_ji074"]
[ext_resource type="Texture2D" uid="uid://65ti8e35t5bh" path="res://Assets/Sprites/catalog_icons/triple_blades_icon.png" id="10_6xbf4"]
[ext_resource type="Texture2D" uid="uid://rfjsdx0wxqnq" path="res://Assets/Sprites/catalog_icons/bomb_icon.png" id="11_jbhnu"]
[ext_resource type="Texture2D" uid="uid://dkppi7365f1jk" path="res://Assets/Sprites/catalog_icons/cursed_key_icon.png" id="12_l1j8t"]
[ext_resource type="Texture2D" uid="uid://dyur5ubofnvf6" path="res://Assets/Sprites/catalog_icons/dash_boots_icon.png" id="12_w1g6l"]
[ext_resource type="Texture2D" uid="uid://21jry0k85pcx" path="res://Assets/Sprites/catalog_icons/dead_rogue_head_icon.png" id="13_5pa2x"]
[ext_resource type="Texture2D" uid="uid://cjonbmn8iaqkl" path="res://Assets/Sprites/catalog_icons/glass_blade_icon.png" id="14_xexi3"]
[ext_resource type="Texture2D" uid="uid://cxdp1ww8okfv2" path="res://Assets/Sprites/catalog_icons/hurtful_charm_icon.png" id="15_cjny6"]
[ext_resource type="Texture2D" uid="uid://cnhdwkw15f4v0" path="res://Assets/Sprites/catalog_icons/holy_heart_icon.png" id="15_f8lrp"]
[ext_resource type="Texture2D" uid="uid://bb2nmaeol5m8t" path="res://Assets/Sprites/catalog_icons/emerald_skull.png" id="15_nmvt8"]
[ext_resource type="Texture2D" uid="uid://bl7r5tr8dsooy" path="res://Assets/Sprites/catalog_icons/magically_trapped_rogue_icon.png" id="16_nvvxa"]
[ext_resource type="Texture2D" uid="uid://dcqbojsxfu3r2" path="res://Assets/Sprites/catalog_icons/holy_key_icon.png" id="17_7sv72"]
[ext_resource type="Texture2D" uid="uid://cmwm5gbdg4wt3" path="res://Assets/Sprites/catalog_icons/poison_gas_icon.png" id="17_rjcok"]
[ext_resource type="Texture2D" uid="uid://bdq2hockskod5" path="res://Assets/Sprites/catalog_icons/poorly_made_voodoo_doll_icon.png" id="18_qrm06"]
[ext_resource type="Texture2D" uid="uid://d0l7ggcqcranr" path="res://Assets/Sprites/items/buring_voodoo_doll.png" id="19_kq26k"]
[ext_resource type="Texture2D" uid="uid://nd1033fxydae" path="res://Assets/Sprites/catalog_icons/protective_charm_icon.png" id="20_syglk"]
[ext_resource type="Texture2D" uid="uid://dgasd5e1e6oro" path="res://Assets/Sprites/catalog_icons/rogue_in_a_bottle_icon.png" id="21_16vdo"]
[ext_resource type="Texture2D" uid="uid://bxhnibool8yuh" path="res://Assets/Sprites/catalog_icons/sleek_blades_icon.png" id="22_xyfvl"]
[ext_resource type="Theme" uid="uid://pv4evjjac8wt" path="res://Assets/general_theme.tres" id="23_kwxpj"]
[ext_resource type="Texture2D" uid="uid://cedjftvldsvsj" path="res://Assets/Sprites/catalog_icons/sapphire_horn_icon.png" id="25_kocnh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tmdcs"]
atlas = ExtResource("3_6n6lt")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4ifb"]
atlas = ExtResource("4_6ymjm")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdvgy"]
atlas = ExtResource("5_buo2t")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pkgh"]
atlas = ExtResource("6_x4hkk")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnubb"]
atlas = ExtResource("7_3vbuo")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_topuq"]
atlas = ExtResource("9_ji074")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yypc1"]
atlas = ExtResource("10_6xbf4")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2lmd"]
atlas = ExtResource("11_jbhnu")
region = Rect2(0, 0, 17, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_dnxgb"]
atlas = ExtResource("12_l1j8t")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n15yf"]
atlas = ExtResource("12_w1g6l")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gatrd"]
atlas = ExtResource("13_5pa2x")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgfrb"]
atlas = ExtResource("15_nmvt8")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_frrrf"]
atlas = ExtResource("14_xexi3")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ss8qs"]
atlas = ExtResource("15_f8lrp")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhpu7"]
atlas = ExtResource("17_7sv72")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_btxan"]
atlas = ExtResource("15_cjny6")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xywox"]
atlas = ExtResource("16_nvvxa")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nasul"]
atlas = ExtResource("17_rjcok")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sevvl"]
atlas = ExtResource("18_qrm06")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2xyx"]
atlas = ExtResource("19_kq26k")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7ugb"]
atlas = ExtResource("19_kq26k")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yinwy"]
atlas = ExtResource("19_kq26k")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ma3oo"]
atlas = ExtResource("20_syglk")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3uc6d"]
atlas = ExtResource("21_16vdo")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1g35"]
atlas = ExtResource("25_kocnh")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jflw0"]
atlas = ExtResource("8_3xt8q")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bn66n"]
atlas = ExtResource("22_xyfvl")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_51jbf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmdcs")
}],
"loop": false,
"name": &"Dust_blade",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4ifb")
}],
"loop": false,
"name": &"Poison",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdvgy")
}],
"loop": false,
"name": &"Quick_blades",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pkgh")
}],
"loop": false,
"name": &"Shadow_blade",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnubb")
}],
"loop": false,
"name": &"Shadow_flame",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_topuq")
}],
"loop": false,
"name": &"Speed_boots",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yypc1")
}],
"loop": false,
"name": &"Triple_blades",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2lmd")
}],
"loop": false,
"name": &"bomb",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dnxgb")
}],
"loop": false,
"name": &"cursed_key",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n15yf")
}],
"loop": false,
"name": &"dash_boots",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gatrd")
}],
"loop": false,
"name": &"dead_rogues_head",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgfrb")
}],
"loop": false,
"name": &"emerald_skull",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_frrrf")
}],
"loop": false,
"name": &"glass_blade",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ss8qs")
}],
"loop": false,
"name": &"holy_heart",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhpu7")
}],
"loop": false,
"name": &"holy_key",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_btxan")
}],
"loop": false,
"name": &"hurtful_charm",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xywox")
}],
"loop": true,
"name": &"magically_trapped_rogue",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nasul")
}],
"loop": false,
"name": &"poison_gas",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sevvl")
}],
"loop": false,
"name": &"poorly_made_voodoo",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2xyx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7ugb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yinwy")
}],
"loop": true,
"name": &"poorly_made_voodoo_fire",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ma3oo")
}],
"loop": false,
"name": &"protective_charm",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3uc6d")
}],
"loop": false,
"name": &"rogue_in_a_bottle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1g35")
}],
"loop": false,
"name": &"sapphire_horn",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jflw0")
}],
"loop": false,
"name": &"shadow_heart",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bn66n")
}],
"loop": false,
"name": &"sleek_blade",
"speed": 5.0
}]

[node name="Larger_item_UI_slot" type="Control"]
layout_mode = 3
anchors_preset = 0
scale = Vector2(0.01, 0.01)
script = ExtResource("1_b8hg7")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-3.8147e-06, -3.8147e-06)
texture = ExtResource("2_ii87q")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-3.8147e-06, -3.8147e-06)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_51jbf")
animation = &"sapphire_horn"

[node name="stack_Label" type="Label" parent="."]
layout_mode = 0
offset_left = -16.6667
offset_top = 9.66666
offset_right = 55.3333
offset_bottom = 54.6667
theme = ExtResource("23_kwxpj")
theme_override_font_sizes/font_size = 48
text = "000"
horizontal_alignment = 2
vertical_alignment = 2

[node name="GreyOut_sprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(10, 7)
texture = ExtResource("2_ii87q")

[node name="cooldown_Label" type="Label" parent="GreyOut_sprite"]
offset_left = -48.0
offset_top = -48.0
offset_right = 48.0
offset_bottom = 48.0
theme = ExtResource("23_kwxpj")
theme_override_font_sizes/font_size = 64
text = "5.0"
horizontal_alignment = 1
vertical_alignment = 1
